clean architecture layer added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.BMICalculator"
         tools:targetApi="31">
         <activity
-            android:name=".DetailActivity"
+            android:name=".presentation.DetailActivity"
             android:exported="false" />
         <activity
-            android:name=".HistoryActivity"
+            android:name=".presentation.HistoryActivity"
             android:exported="false" />
         <activity
-            android:name=".ResultActivity"
+            android:name=".presentation.ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
